# bookmarks

./: README.md  pyproject.toml
bookmarks/account/: forms.py  models.py  urls.py  views.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: register.html  register_done.html
bookmarks/account/templates/registration/: logged_out.html  login.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
bookmarks/bookmarks/: asgi.py  settings.py  urls.py  wsgi.py
